<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="center_horizontal|top"
     >
    
    <TextView
        android:id="@+id/game_history_header_text_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
	  	android:gravity="center"
	  	style="@android:style/TextAppearance.Medium"
        />
    <LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center"
	    >
		<TextView
		    android:id="@+id/black_card_history_text_view"
		    android:layout_width="150dp"
		    android:layout_height="200dp"
		    style="@style/BlackCard"
		    android:layout_marginRight="10dp"
		    />
		
	</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="10dp"
	    android:gravity="center"
	    android:weightSum="3"
	    >
	    <Button
	        android:id="@+id/back_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:padding="5dp"
	        style="@android:style/TextAppearance.Medium"
	        android:text="@string/backward"
	        />
        <Spinner
            android:layout_width="0dp"
            android:layout_weight="1"
            android:prompt="@string/jump"
            android:layout_height="wrap_content"
            android:id="@+id/jump_round_spinner"
            />
	    <Button
	        android:id="@+id/forward_button"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:gravity="center"
	        android:padding="5dp"
	        style="@android:style/TextAppearance.Medium"
	        android:text="@string/forward"
	        />
	</LinearLayout>
</LinearLayout>
